[package]
authors = ['crustio']
edition = '2018'
name = 'crust-runtime'
version = '0.11.1'
build = 'build.rs'
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }

[dependencies]
# third party dependencies
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.3.5' }
serde = { features = ['derive'], optional = true, version = '1.0.117' }
static_assertions = "1.1.0"

# substrate primitives
authority-discovery-primitives = { default-features = false, package = 'sp-authority-discovery', git = "https://github.com/paritytech/substrate", branch = "master" }
babe-primitives = { default-features = false, package = 'sp-consensus-babe', git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

# substrate frame dependencies
pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-bounties = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-collective = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-democracy = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-elections-phragmen = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-identity = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
pallet-membership = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-offences = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-scheduler = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-staking-reward-curve = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-tips = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-utility = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

# substrate benchmark dependencies
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }

# Used for the crust's RPCs
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

# crust runtime modules
balances = { version = "0.11.1", package = 'cstrml-balances', path = '../cstrml/balances', default-features = false }
candy = { version = "0.11.1", package = 'cstrml-candy', path = '../cstrml/candy', default-features = false  }
claims = { version = "0.11.1", package = 'cstrml-claims', path = '../cstrml/claims', default-features = false }
market = { version = "0.11.1", package = 'cstrml-market', path = '../cstrml/market', default-features = false }
primitives = { version = "0.11.1", package = 'cst-primitives', path = '../primitives', default-features = false }
swork = { version = "0.11.1", package = 'cstrml-swork', path = '../cstrml/swork', default-features = false }
staking = { version = "0.11.1", package = 'cstrml-staking', path = '../cstrml/staking', default-features = false }

# crust benchmark dependencies
swork-benchmarking = { version = "0.11.1", package = 'cstrml-swork-benchmarking', path = '../cstrml/swork/benchmarking', default-features = false, optional = true }

[features]
default = ['std']
std = [
    'authority-discovery-primitives/std',
    'babe-primitives/std',
    'codec/std',
    'primitives/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'frame-support/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-authorship/std',
    'pallet-authority-discovery/std',
    'pallet-babe/std',
    'balances/std',
    'pallet-bounties/std',
    'candy/std',
    'claims/std',
    'pallet-collective/std',
    'pallet-elections-phragmen/std',
    'frame-executive/std',
    'pallet-democracy/std',
    'pallet-grandpa/std',
    'pallet-identity/std',
    'pallet-im-online/std',
    'pallet-indices/std',
    'market/std',
    'pallet-membership/std',
    'pallet-offences/std',
    'pallet-randomness-collective-flip/std',
    'pallet-scheduler/std',
    'pallet-session/std',
    'staking/std',
    'pallet-sudo/std',
    'swork/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-timestamp/std',
    'pallet-tips/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-treasury/std',
    'pallet-utility/std',
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "balances/runtime-benchmarks",
    "frame-system-benchmarking",
    "staking/runtime-benchmarks",
    "market/runtime-benchmarks",
    "swork-benchmarking"
]